overlays/qa/be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: qa-be
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qa-be
    spec:
      containers:
        - image: jcy0308/ice-gs-thesis-be-qa
          imagePullPolicy: Always
          name: be
          ports:
            - containerPort: 4000
