overlays/qa/be/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-clusterissuer"
    nginx.ingress.kubernetes.io/proxy-body-size: "200m" # 최대 파일 용량 200 MB 로 세팅
spec:
  tls:
    - hosts:
        - qa.ice.scg.skku.ac.kr
      secretName: cs-grad-thesis-qa-tls
  rules:
    - host: qa.ice.scg.skku.ac.kr
      http:
        paths:
          - backend:
              service:
                name: be-service
                port:
                  number: 80
            path: /v1
            pathType: Prefix
